// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Language generator for $java Generates a matcher with all the bells and whistles 1`] = `
"/* eslint-disable */
/******* @contract-case/case-definition-generator ********
THIS FILE WAS AUTOGENERATED
DO NOT MODIFY IT
******** @contract-case/case-definition-generator ********
    */
import { AnyCaseMatcherOrData } from '@contract-case/case-plugin-dsl-types';
import { arrayContains, MatcherArrayContains } from '../arrays/arrayContains';
//
export interface MatcherKitchenSink {
  '_case:matcher:type': '_case:KitchenSink';
  '_case:matcher:firstParam': AnyCaseMatcherOrData[];
  '_case:matcher:passThroughExample': MatcherArrayContains;
  '_case:matcher:someOptional'?: string;
  '_case:matcher:someConstant': 'someValue';
  '_case:context:overallContextModifier': 'newContextValue';
}
/**
 * Illustrates all the possible features
 *
 * @param firstParam - Any number of matchers, each of which must be found inside the array, in any order.
 * @param passThroughExample - Illustrates a passthrough matcher
 * @param someOptional - illustrates optional values
 */
//
export const kitchenSink = (
  firstParam: AnyCaseMatcherOrData[],
  matchers: AnyCaseMatcherOrData[],
  someOptional?: string,
): MatcherKitchenSink => ({
  '_case:matcher:type': '_case:KitchenSink' as const,
  '_case:matcher:someConstant': 'someValue',
  '_case:context:overallContextModifier': 'newContextValue',
  '_case:matcher:firstParam': firstParam,
  '_case:matcher:passThroughExample': arrayContains(matchers),
  ...(someOptional !== undefined
    ? { '_case:matcher:someOptional': someOptional }
    : {}),
});
"
`;

exports[`Language generator for $java Generates a matcher with all the bells and whistles 2`] = `
"package io.contract_testing.contractcase.dsl.matchers.tests;

import com.fasterxml.jackson.annotation.JsonInclude;
import com.fasterxml.jackson.annotation.JsonInclude.Include;
import com.fasterxml.jackson.annotation.JsonProperty;
import io.contract_testing.contractcase.dsl.ContractCaseDsl;
import io.contract_testing.contractcase.dsl.DslMatcher;
import io.contract_testing.contractcase.dsl.matchers.arrays.ArrayContains;
import jakarta.annotation.Generated;
import java.lang.Object;
import java.lang.String;
import java.util.List;
import javax.annotation.Nullable;
import lombok.Builder;
import lombok.Getter;
import org.jetbrains.annotations.NotNull;

/**
 * Illustrates all the possible features
 */
@Generated("@contract-case/case-definition-generator")
@ContractCaseDsl
public class KitchenSink implements DslMatcher {

  /**
   * ContractCase's internal type for this element
   */
  @Getter
  @JsonProperty("_case:matcher:type")
  private final String type;

  /**
   * Constant parameter someConstant
   */
  @Getter
  @JsonProperty("_case:matcher:someConstant")
  private final String someConstant = "someValue";

  /**
   * Any number of matchers, each of which must be found inside the array, in any order.
   */
  @Getter
  @JsonProperty("_case:matcher:firstParam")
  private final List<Object> firstParam;

  /**
   * Illustrates a passthrough matcher
   */
  @Getter
  @JsonProperty("_case:matcher:passThroughExample")
  private final ArrayContains passThroughExample;

  /**
   * illustrates optional values
   */
  @Nullable
  @JsonInclude(Include.NON_NULL)
  @Getter
  @JsonProperty("_case:matcher:someOptional")
  private final String someOptional;

  @Getter
  @JsonProperty("_case:context:overallContextModifier")
  @JsonInclude(Include.ALWAYS)
  public final String overallContextModifier = "newContextValue";

  /**
   * Illustrates all the possible features
   * @param firstParam Any number of matchers, each of which must be found inside the array, in any order.
   * @param matchers This is really a parameter of the passthrough
   * @param someOptional illustrates optional values
   */
  @Builder
  public KitchenSink(
    @NotNull final List<Object> firstParam,
    @NotNull final List<Object> matchers,
    @Nullable final String someOptional
  ) {
    this.type = "_case:KitchenSink";
    this.firstParam = firstParam;
    this.passThroughExample = new ArrayContains(matchers);
    this.someOptional = someOptional;
  }
}
"
`;

exports[`Language generator for $java generates a matcher as expected 1`] = `
"/* eslint-disable */
/******* @contract-case/case-definition-generator ********
THIS FILE WAS AUTOGENERATED
DO NOT MODIFY IT
******** @contract-case/case-definition-generator ********
    */
import {
  AnyCaseMatcherOrData,
  AnyData,
} from '@contract-case/case-plugin-dsl-types';
//
export interface MatcherArrayEachEntryMatches {
  '_case:matcher:type': '_case:ArrayEachEntryLike';
  '_case:matcher:matcher': AnyCaseMatcherOrData;
  '_case:matcher:example'?: AnyData[];
}
/**
 * Matches an array where each element matches the provided matcher.
 *
 * @param matcher - The matcher to match against each element of the array.
 * @param example - Example data to use instead of the generated one
 */
//
export const arrayEachEntryMatches = (
  matcher: AnyCaseMatcherOrData,
  example?: AnyData[],
): MatcherArrayEachEntryMatches => ({
  '_case:matcher:type': '_case:ArrayEachEntryLike' as const,
  '_case:matcher:matcher': matcher,
  ...(example !== undefined ? { '_case:matcher:example': example } : {}),
});
"
`;

exports[`Language generator for $java generates a matcher as expected 2`] = `
"package io.contract_testing.contractcase.dsl.matchers.tests;

import com.fasterxml.jackson.annotation.JsonInclude;
import com.fasterxml.jackson.annotation.JsonInclude.Include;
import com.fasterxml.jackson.annotation.JsonProperty;
import io.contract_testing.contractcase.dsl.ContractCaseDsl;
import io.contract_testing.contractcase.dsl.DslMatcher;
import jakarta.annotation.Generated;
import java.lang.Object;
import java.lang.String;
import java.util.List;
import javax.annotation.Nullable;
import lombok.Builder;
import lombok.Getter;
import org.jetbrains.annotations.NotNull;

/**
 * Matches an array where each element matches the provided matcher.
 */
@Generated("@contract-case/case-definition-generator")
@ContractCaseDsl
public class ArrayEachEntryMatches implements DslMatcher {

  /**
   * ContractCase's internal type for this element
   */
  @Getter
  @JsonProperty("_case:matcher:type")
  private final String type;

  /**
   * The matcher to match against each element of the array.
   */
  @Getter
  @JsonProperty("_case:matcher:matcher")
  private final Object matcher;

  /**
   * Example data to use instead of the generated one
   */
  @Nullable
  @JsonInclude(Include.NON_NULL)
  @Getter
  @JsonProperty("_case:matcher:example")
  private final List<Object> example;

  /**
   * Matches an array where each element matches the provided matcher.
   * @param matcher The matcher to match against each element of the array.
   * @param example Example data to use instead of the generated one
   */
  @Builder
  public ArrayEachEntryMatches(
    @NotNull final Object matcher,
    @Nullable final List<Object> example
  ) {
    this.type = "_case:ArrayEachEntryLike";
    this.matcher = matcher;
    this.example = example;
  }
}
"
`;

exports[`Language generator for $java works for the other case too 1`] = `
"/* eslint-disable */
/******* @contract-case/case-definition-generator ********
THIS FILE WAS AUTOGENERATED
DO NOT MODIFY IT
******** @contract-case/case-definition-generator ********
    */
import { AnyCaseMatcherOrData } from '@contract-case/case-plugin-dsl-types';
//
export interface MatcherArrayContains {
  '_case:matcher:type': '_case:ArrayContains';
  '_case:matcher:matchers': AnyCaseMatcherOrData[];
}
/**
 * Matches an Array which contains elements that match the given matchers. Note that two different matchers may be satisfied by the same item in the array.
 *
 * @param matchers - Any number of matchers, each of which must be found inside the array, in any order.
 */
//
export const arrayContains = (
  matchers: AnyCaseMatcherOrData[],
): MatcherArrayContains => ({
  '_case:matcher:type': '_case:ArrayContains' as const,
  '_case:matcher:matchers': matchers,
});
"
`;

exports[`Language generator for $java works for the other case too 2`] = `
"package io.contract_testing.contractcase.dsl.matchers.tests;

import com.fasterxml.jackson.annotation.JsonProperty;
import io.contract_testing.contractcase.dsl.ContractCaseDsl;
import io.contract_testing.contractcase.dsl.DslMatcher;
import jakarta.annotation.Generated;
import java.lang.Object;
import java.lang.String;
import java.util.List;
import lombok.Builder;
import lombok.Getter;
import org.jetbrains.annotations.NotNull;

/**
 * Matches an Array which contains elements that match the given matchers. Note that two different matchers may be satisfied by the same item in the array.
 */
@Generated("@contract-case/case-definition-generator")
@ContractCaseDsl
public class ArrayContains implements DslMatcher {

  /**
   * ContractCase's internal type for this element
   */
  @Getter
  @JsonProperty("_case:matcher:type")
  private final String type;

  /**
   * Any number of matchers, each of which must be found inside the array, in any order.
   */
  @Getter
  @JsonProperty("_case:matcher:matchers")
  private final List<Object> matchers;

  /**
   * Matches an Array which contains elements that match the given matchers. Note that two different matchers may be satisfied by the same item in the array.
   * @param matchers Any number of matchers, each of which must be found inside the array, in any order.
   */
  @Builder
  public ArrayContains(@NotNull final List<Object> matchers) {
    this.type = "_case:ArrayContains";
    this.matchers = matchers;
  }
}
"
`;
